<resources>
    <string name="app_name">UnShelf</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_signing_up_you_agree_to_unshelf_s_terms_of_service_privacy_policy"><![CDATA[By signing up, you agree to UnShelf’s Terms of Service & Privacy Policy]]></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_hello_world">HelloWorld</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <!--    LUCKY SPACE-->
    <!--    rv_item_popular_restaurant strings-->
    <string name="delivery_to">Delivery to</string>
    <string name="delivery_address">Cebu Institute of Technology - University</string>
    <string name="popular_restaurants">Popular Restaurants</string>
    <string name="star">Star</string>
    <string name="restaurant_name">Dunkin Donuts</string>
    <string name="cuisine_type">Filipino</string>
    <string name="rating">4.5</string>
    <string name="time">25 mins</string>
    <string name="search_hint">What are you craving for today?</string>

    <!--    address manager-->
    <string name="share_current_loc">Share my current location</string>
    <string name="enter_address_manually">Enter address manually</string>
    <string name="find_restaurants_near_you">Find restaurants and shops near you!</string>
    <string name="desc_allow_loc_access">By allowing access, you can search for restaurants and shops near you and receive more accurate deals.</string>
    <string name="confirm_loc">Confirm location</string>

    <!--    Cx Order History-->
    <string name="cx_order_hist">Orders</string>
    <string name="cx_order_search">Search order ID, name, or description</string>
    <string name="cx_filters_txt">Filters</string>
    <string name="cx_product">Product</string>
    <string name="cx_order_id">Order ID: </string>
    <string name="cx_product_date">0/00/0000</string>
    <string name="cx_order_status">Order status</string>
    <string name="cx_order_amount">399.00</string>

    <!--    order status-->
    <string name="order_pending">Pending</string>
    <string name="order_approved">Approved</string>
    <string name="order_cancelled">Cancelled</string>
    <string name="order_refunded">Refunded</string>
    <string name="order_paid">Paid</string>


    <!-- PABS -->
    <string name="store_name"> Store Name</string>
    <string name="rating_store">9.9</string>
    <string name="follower_count">999 </string>
    <string name="profile">Edit Profile</string>
    <string name="title_activity_google_map">GoogleMap</string>
    <string name="default_web_client_id">googleAuth\n</string>

    <string-array name="city_options">
        <item>Cebu City</item>
        <item>Minglanilla City</item>
        <item>Talisay City</item>
    </string-array>
</resources>