<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Model.authentication.Seller_Register"
    android:background="@color/less_white"
    >


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="314dp"
        android:layout_height="466dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.215">

        <EditText
            android:id="@+id/tfSellerUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_border"
            android:hint="@string/email"
            android:paddingStart="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/tfSellerPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_border"
            android:hint="@string/phone_number"
            android:paddingStart="16dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/tfSeller_Name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_border"
            android:hint="@string/full_name"
            android:paddingStart="16dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/tfSellerStore_Name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_border"
            android:hint="Store Name"
            android:paddingStart="16dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/tfSellerPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_border"
            android:hint="@string/password"
            android:paddingStart="16dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/tfConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/default_border"
            android:hint="@string/confirm_password"
            android:paddingStart="16dp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_primary"
            android:fontFamily="@font/jost_medium"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/lblTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/jost_medium"
            android:text="@string/by_signing_up_you_agree_to_unshelf_s_terms_of_service_privacy_policy"
            android:textAlignment="center"
            android:textSize="13sp"
            tools:ignore="TextSizeCheck" />


        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >


            <TextView
                android:id="@+id/textView7"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jost_medium"
                android:text="@string/already_have_an_account"
                android:textSize="14sp"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/bt_secondary"
                android:fontFamily="@font/jost_medium"
                android:text="@string/login"
                android:textSize="14sp"
                tools:ignore="TextSizeCheck,TextContrastCheck"
                android:textColor="@color/white"/>
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="204dp"
        android:layout_height="171dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:srcCompat="@drawable/logo" />


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="360dp"
        android:layout_height="32dp"
        android:layout_marginTop="19dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"

            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/jost_bold"
            android:text="Seller Sign Up"
            android:textColor="@color/green03"
            android:textSize="18dp" />

        <View
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>