<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CxOrderHistory.CxOrderHistory">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_header_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/magnifying_glass_solid" />

            <EditText
                android:id="@+id/editTextText7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/jost_regular"
                android:hint="@string/cx_order_search"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_header_bar"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@drawable/bg_solid_primary_green"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/jost_regular"
            android:text="@string/cx_order_hist"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivBackBtn"
            app:layout_constraintStart_toEndOf="@+id/ivBackBtn"
            app:layout_constraintTop_toTopOf="@+id/ivBackBtn" />

        <ImageView
            android:id="@+id/ivBackBtn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_left_solid" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:srcCompat="@drawable/bars_solid" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cx_filters_txt"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView51"
        app:layout_constraintTop_toBottomOf="@+id/textView51">

        <TextView
            android:id="@+id/textView72"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_oval_corners"
            android:padding="5dp"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:text="@string/order_refunded"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView71"
            app:layout_constraintTop_toTopOf="@+id/textView71" />

        <TextView
            android:id="@+id/textView73"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_oval_corners"
            android:padding="5dp"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:text="@string/order_pending"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_oval_corners"
            android:padding="5dp"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:text="@string/order_cancelled"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView75"
            app:layout_constraintTop_toTopOf="@+id/textView75" />

        <TextView
            android:id="@+id/textView75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_oval_corners"
            android:padding="5dp"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:text="@string/order_approved"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView73"
            app:layout_constraintTop_toTopOf="@+id/textView73" />

        <TextView
            android:id="@+id/textView74"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_oval_corners"
            android:padding="5dp"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:text="@string/order_paid"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView72"
            app:layout_constraintTop_toTopOf="@+id/textView72" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="409dp"
        android:layout_height="525dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>